--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
-#titulo{
-    text-align: center;
-    color: blueviolet;
-    background-color: burlywood;
-    font-weight: bold;
+.box{
+    width: 50px;
+    height: 50px;
+    background: pink;
+    margin: 20px;
 }
