--- a/CSS/position/style.css
+++ b/CSS/position/style.css
@@ -47,7 +47,44 @@ section{
     text-align: center;
     color: azure;
     line-height: 50px;
+}
 
+article{
+    background-color: aqua;
+    width: 98vw;
+    height: 70vh;
+    position: relative;
+    top: 20%;
+    left: 0;
+    text-align: center;
+    line-height: 50px;
+}
+
+.sticky{
+    background-color: black;
+    width: 50%;
+    height: 50%;
+    position: sticky;
+    top: 35%;
+    left: 2%;
+    text-align: center;
+    color: azure;
+    line-height: 50px;
+    border-radius: 10px;
 
 }
 
+footer{
+    width: 95vw;
+    height: 40px;
+    background-color: black;
+    position: relative;
+    top: 30%;
+    left: 1%;
+    border-radius: 10px;
+    border: 5px solid rgb(214, 17, 17);
+    color: aliceblue;
+    text-align: center;
+    line-height: 30px;
+
+}
