--- a/CSS/Desafio1/style.css
+++ b/CSS/Desafio1/style.css
@@ -74,3 +74,60 @@ p{
     line-height: 34px;
     color:#000000;
 }
+
+@media screen and (max-width: 900px){
+    nav{
+        margin: 0;
+    }
+    section{
+        width: auto;
+    }
+    .link-header{
+        display: none;
+    
+
+    }
+
+    .button-header{
+        display: block;
+        margin: 15px 0px 30px 35vw;
+        width: 200px;
+        font-weight: 400;
+       font-size: 20px;
+       line-height: 24px;
+    }
+
+    img{
+        display: block;
+        width: 70%;
+        height: 40%;
+        position: absolute;
+        top: 45%;
+        left: 10%;
+    }
+    h1{
+        font-size: 24px;
+        width: 200px;
+        text-align: center;
+        line-height: 30px;
+    }
+
+    p{
+        font-size: 24px;
+        width: 200px;
+        text-align: center;
+        line-height: 30px;
+    }
+
+    .button-main{
+        display: block;
+        margin: 0px auto;
+        width: 150px;
+        font-weight: 400;
+       font-size: 15px;
+       line-height: 20px;
+      position: absolute;
+       bottom: 55%;
+    }
+
+}
