--- a/CSS/projeto02/style.css
+++ b/CSS/projeto02/style.css
@@ -47,7 +47,7 @@ p{
     font-size: 28px;
     line-height: 48px;
     opacity: 0.6;
-    margin: 15px,0;
+    margin: 15px 0 ;
     width: 540px;
 }
 button{
@@ -69,4 +69,78 @@ button:hover{
 }
 button:active{
     opacity: 0.5;
+}
+
+a{
+    font-size: 28px;
+    line-height: 41px;
+    color: #5d5d7d;
+    margin-right: 41px;
+    cursor: pointer;
+}
+
+a:nth-child(2){
+    opacity: 0.4;
+}
+
+a:hover{
+    opacity: 0.4;
+}
+
+a:active{
+    opacity: 0.8;
+}
+
+header{
+    margin: 24px 0 0 57px;
+}
+
+@media screen and (max-width: 900px){
+
+    .container-left{
+        width: 100%;
+        height: 50%;
+        padding: 0;
+        margin: 0;
+    }
+    .container-right{
+        display: block;
+        height: auto;
+        width: 100%;
+        position: static;
+        padding: 40px;
+    }
+
+    img{
+        position: static;
+        max-width: 90%;
+        
+    }
+
+    header{
+        display: none;
+    }
+
+    h1{
+        font-size: 36px;
+        font-weight:400;
+        width: auto;
+        margin: 58px 50px 0 50px;
+        text-align: center;
+    }
+
+    p{
+        margin: 15px 40px;
+        width: auto;
+        text-align: center;
+        font-size: 14px;
+        line-height: 24px;
+    }
+    
+    button{
+        display: block;
+        margin: 0 auto;
+    }
+
+
 }
