--- a/Convert Money/index.css
+++ b/Convert Money/index.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 18px;
 }
 
 boby{
@@ -22,10 +25,7 @@ header{
 }
 
 h1{
-    font-style: normal;
-    font-weight: normal;
     font-size: 24px;
-    line-height: 18px;
     color: #f4f4f4;
     text-align: center;
     padding-top: 22px;
@@ -36,10 +36,7 @@ main{
 }
 
 label{
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
-    line-height: 18px;
     color: #777777
 
 }
@@ -82,7 +79,6 @@ button{
     border-radius: 25px;
     height: 48px;
     border: none;
-    font-style: normal;
     font-weight: bold;
     line-height: 18px;
     font-size: 16px;
@@ -97,4 +93,30 @@ button:hover{
 
 button:active{
     opacity: 0.7;
+}
+
+section{
+    border: 1px solid #1b83e2;
+    border-radius: 4px;
+}
+.currency-container{
+    text-align: center;
+    padding: 10px;
+
+}
+
+.currency-name{
+    font-size: 14px;
+    color: #777777;
+}
+
+.currency-value{
+    color: #1b83e2;
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.arrow-img{
+    margin: 15px auto;
+    display: block;
 }
