--- a/BackGroundColor/style.css
+++ b/BackGroundColor/style.css
@@ -8,3 +8,14 @@
     height: 39px;
     border-radius: 10px;
 }
+
+#quadrado{
+    width: 500px;
+    height: 300px;
+    background-color: black;
+    position: absolute;
+    top:30%;
+    left:30%;
+    
+
+}
